# ROBOCON2026

./: README.md
Vision/R2/: R2.xml  R2Communication.py  R2_BEHAVIOR_TREE_README.md  R2_NAVIGATION_STARTUP_GUIDE.md  R2_ROS2_TOPIC_REFERENCE.md  R2_V3.py  R2_V3.xml  README_DEPLOY.md  README_SSH_QUICKSTART.md  generate_groot_xml.py  kfs_planner.py  mission_duikang.py  mission_kfs.py  mission_script.py  mission_wuguan.py  r2_actions.py  r2_behavior_tree.py  r2_behavior_tree_groot.xml  模拟KFS放置和寻路.cpp
Vision/R2/R2_ws_src/odin_ros_driver/config/: control_command.yaml
Vision/R2/R2_ws_src/r2_communication/: package.xml  setup.cfg  setup.py
Vision/R2/R2_ws_src/r2_communication/launch/: behavior_tree.launch.py  keyboard_control.launch.py
Vision/R2/R2_ws_src/r2_communication/r2_communication/: R2_Protocol.py  keyboard_control.py  r2_communication.py
Vision/R2/berxel/: README.md  calibrate.py  depth_roi_strip_detector.py  distance_detector.py  main.py  stair_down_detector.py
Vision/R2/berxel/BerxelSdkDriver/: BerxelHawkContext.py  BerxelHawkDevice.py  BerxelHawkNativeMethods.py
Vision/R2/berxel/Samples/: HawkColor.py  HawkColorDepth.py  HawkDepth.py  HawkDubleDeviceColor.py  HawkIr.py  HawkSaveCloudPoint.py  HawkTest.py
Vision/R2/berxel/src/: camera_manager.py  data_recorder.py  distance_measurer.py  visualizer.py
Vision/R2/image/: cam_in_ex.txt
